--- a/mistelaflask/templates/login.html
+++ b/mistelaflask/templates/login.html
@@ -2,6 +2,13 @@
 
 {% block content %}
 <div class="column is-4 is-offset-4">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <div class="notification is-danger">
+            {{ messages[0] }}
+        </div>
+    {% endif %}
+    {% endwith %}
     <h3 class="title">Login</h3>
     <div class="box">
         <form method="POST" action="/login">
