--- a/mistelaflask/templates/admin_guests.html
+++ b/mistelaflask/templates/admin_guests.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin.html" %}
 
 {% block content %}
 <div class="column is-4 is-offset-4">
@@ -24,13 +24,13 @@
             </div>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="number" name="max_guests" placeholder="Allowed guests">
+                    <input class="input is-large" type="number" name="max_adults" placeholder="Allowed guests">
                 </div>
             </div>
             {% for event in events %}
             <div class="field">
                 <label class="checkbox">
-                    <input type="checkbox" name="{{ event.id }}">
+                    <input type="checkbox" name="event_{{ event.id }}">
                     {{event.name}}
                 </label>
             </div>
