--- a/mistelaflask/templates/admin.html
+++ b/mistelaflask/templates/admin.html
@@ -20,17 +20,16 @@
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 Home
                             </a>
-                            {% if current_user.is_authenticated %}
+                            {% if current_user.admin %}
+                            <a href="{{ url_for('admin.index') }}" class="navbar-item">
+                                Admin page
+                            </a>
                             <a href="{{ url_for('admin.guests') }}" class="navbar-item">
                                 Guests
                             </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
                             <a href="{{ url_for('admin.events') }}" class="navbar-item">
                                 Events
                             </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
                             </a>
