chore: It is now required to log in to see the index page

--- a/mistelaflask/templates/admin.html
+++ b/mistelaflask/templates/admin.html
@@ -30,6 +30,9 @@
                             <a href="{{ url_for('admin.events') }}" class="navbar-item">
                                 Events
                             </a>
+                            <a href="{{ url_for('admin.responses') }}" class="navbar-item">
+                                Responses
+                            </a>
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
                             </a>
