--- a/mistelaflask/templates/index.html
+++ b/mistelaflask/templates/index.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 
-{% if current_user.is_authenticated %}
 {% block content %}
+{% if current_user.is_authenticated %}
 <h1 class="title">
   Our Wedding
 </h1>
 <h2 class="subtitle">
-  Easy authentication and authorization in Flask.
+  Timeline
 </h2>
-{% endblock %}
+  <div class="box">
+  {% for _event in timeline %}
+    <div class="row">
+      {{ _event.start_time }} - {{ _event.end_time}} :<b>{{_event.name}}</b>
+    </div>
+  {% endfor %}
+  </div>
 {% endif %}
+{% endblock %}
