--- a/mistelaflask/templates/admin_index.html
+++ b/mistelaflask/templates/admin_index.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "admin.html" %}
 
 {% block content %}
 <h1 class="title">
-  Welcome, {{ name }} !
+  Admin page
 </h1>
 {% endblock %}
