chore: Short cleanup of the templates

--- a/mistelaflask/templates/admin_responses.html
+++ b/mistelaflask/templates/admin_responses.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 
 {% block content %}
-<div class="column">
+<div class="">
     <h3 class="title">Manage guests</h3>
     <table class="table">
         <thead>
