--- a/mistelaflask/templates/index.html
+++ b/mistelaflask/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% if current_user.is_authenticated %}
 <h1 class="title">
-  Our Wedding
+  Our Event
 </h1>
 <h2 class="subtitle">
   Timeline
