--- a/mistelaflask/templates/admin/admin_events_add.html
+++ b/mistelaflask/templates/admin/admin_events_add.html
@@ -1,18 +1,9 @@
 {% extends "admin/admin_events_base.html" %}
 
 {% block event_content %}
-    <form method="POST" action="/admin/events">
-        <div class="field">
-            <div class="control">
-                <input class="input is-medium" type="text" name="name" placeholder="Name" autofocus="">
-            </div>
-        </div>
-
-        <div class="field">
-            <div class="control">
-                <input class="input is-medium" type="text" name="description" placeholder="Description" autofocus="">
-            </div>
-        </div>
-        <button class="button is-block is-info is-medium is-fullwidth">Add event</button>
+    <form method="POST" action="/admin/events/add">
+        {% from 'admin/admin_event_form.html' import event_form %}
+        {{ event_form() }}
+        <button class="button is-block is-info is-medium is-fullwidth">Save event</button>
     </form>
 {% endblock %}
