--- a/mistelaflask/templates/admin/admin_events_base.html
+++ b/mistelaflask/templates/admin/admin_events_base.html
@@ -4,21 +4,21 @@
 <div class="column">
     <h3 class="title">Manage Events</h3>
     <div class="box">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="notification is-danger">
-                {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
-            </div> 
-        {% endif %}
-        {% endwith %}
         <div class="tabs is-centered is-medium is-boxed">
             <ul>
                 <li><a href="{{ url_for('admin.events') }}">List</a></li>
-                <li><a href="{{ url_for('admin.create_event') }}">Create</a></li>
+                <li><a href="{{ url_for('admin.events_add') }}">Create</a></li>
                 <li><a>Extra</a></li>
             </ul>
         </div>
         <div class="box">
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="notification is-danger">
+                    {{ messages[0] }}
+                </div> 
+            {% endif %}
+            {% endwith %}
             {% block event_content %}
             {% endblock %}
         </div>
