chore(admin/adim_events): Improved templates layout

--- a/mistelaflask/templates/admin/admin_events_base.html
+++ b/mistelaflask/templates/admin/admin_events_base.html
@@ -19,8 +19,12 @@
                 </div> 
             {% endif %}
             {% endwith %}
-            {% block event_content %}
-            {% endblock %}
+            <div class="columns is-mobile is-centered">
+                <div class="column is-half">
+                    {% block event_content %}
+                    {% endblock %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
