--- a/mistelaflask/templates/admin/admin_event_form.html
+++ b/mistelaflask/templates/admin/admin_event_form.html
@@ -1,13 +1,22 @@
 {% macro event_form(event_name,event_description) %}
-<div class="field">
-    <div class="control">
-        <input value="{{event_name}}" class="input is-medium" type="text" name="name" placeholder="Name" autofocus="">
+<div class="field is-horizontal">
+    <div class="field-label is-normal">
+        <label class="label">Name</label>
+    </div>  
+    <div class="field-body">
+        <div class="control">
+            <input value="{{event_name}}" class="input" type="text" name="name" placeholder="Name" autofocus="">
+        </div>
     </div>
 </div>
-
-<div class="field">
-    <div class="control">
-        <input value="{{event_description}}" class="input is-medium" type="text" name="description" placeholder="Description" autofocus="">
+<div class="field is-horizontal">
+    <div class="field-label is-normal">
+        <label class="label">Description</label>
+    </div>  
+    <div class="field-body">
+        <div class="control">
+            <input value="{{event_description}}" class="input" type="text" name="description" placeholder="Description" autofocus="">
+        </div>
     </div>
 </div>
 {% endmacro %}
