chore(mistelaflask/templates/admin/events): Moved event templates into their own directory for better maintainance

--- a/mistelaflask/templates/admin/events/admin_events.html
+++ b/mistelaflask/templates/admin/events/admin_events.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_events_base.html" %}
+{% extends "admin/events/admin_events_base.html" %}
 
 {% block event_content %}
     <table class="table">
