chore(mistelaflask/views): Refactored admin events into views so it's easier to manage

--- a/mistelaflask/templates/admin/admin.html
+++ b/mistelaflask/templates/admin/admin.html
@@ -27,7 +27,7 @@
                             <a href="{{ url_for('admin.guests') }}" class="navbar-item">
                                 Guests
                             </a>
-                            <a href="{{ url_for('admin.events') }}" class="navbar-item">
+                            <a href="{{ url_for('admin.events_list') }}" class="navbar-item">
                                 Events
                             </a>
                             <a href="{{ url_for('admin.responses') }}" class="navbar-item">
