--- a/mistelaflask/templates/admin/events/admin_events_base.html
+++ b/mistelaflask/templates/admin/events/admin_events_base.html
@@ -6,17 +6,19 @@
     <div class="box">
         <div class="tabs is-centered is-medium is-boxed">
             <ul>
-                <li><a href="{{ url_for('admin.events') }}">List</a></li>
+                <li><a href="{{ url_for('admin.events_list') }}">List</a></li>
                 <li><a href="{{ url_for('admin.events_add') }}">Create</a></li>
                 <li><a>Extra</a></li>
             </ul>
         </div>
         <div class="box">
-            {% with messages = get_flashed_messages() %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
-                <div class="notification is-danger">
-                    {{ messages[0] }}
-                </div> 
+                <ul class=flashes>
+                {% for category, message in messages %}
+                    <li class="notification is-{{ category }} is-light">{{ message }}</li>
+                {% endfor %}
+                </ul>
             {% endif %}
             {% endwith %}
             <div class="columns is-mobile is-centered">
