--- a/mistelaflask/templates/admin/events/admin_events_list.html
+++ b/mistelaflask/templates/admin/events/admin_events_list.html
@@ -5,6 +5,7 @@
         <thead>
             <tr>
                 <th>Actions</th>
+                <th>Id</th>
                 <th>Name</th>
                 <th>Description</th>
             </tr>
@@ -16,6 +17,7 @@
                     <a href="{{ url_for('admin.events_detail', event_id=event.id) }}"><i class="fas fa-pencil"></i></a>
                     <a href="{{ url_for('admin.events_remove', event_id=event.id) }}"><i class="fas fa-trash"></i></a>
                 </td>
+                <td class="has-text-left">{{ event.id}}</td>
                 <td class="has-text-left">{{ event.name }}</td>
                 <td class="has-text-left">{{ event.description }}</td>
             </tr>
