feat(admin/guests): We can now display an admin menu for listing all registered guests and their invitations

--- a/mistelaflask/templates/admin/guests/admin_guests_base.html
+++ b/mistelaflask/templates/admin/guests/admin_guests_base.html
@@ -22,7 +22,7 @@
             {% endif %}
             {% endwith %}
             <div class="columns is-mobile is-centered">
-                <div class="column is-half">
+                <div class="column is-10" >
                     {% block guest_content %}
                     {% endblock %}
                 </div>
