--- a/mistelaflask/templates/admin/admin.html
+++ b/mistelaflask/templates/admin/admin.html
@@ -24,7 +24,7 @@
                             <a href="{{ url_for('admin.index') }}" class="navbar-item">
                                 Admin page
                             </a>
-                            <a href="{{ url_for('admin.guests') }}" class="navbar-item">
+                            <a href="{{ url_for('admin.guests_list') }}" class="navbar-item">
                                 Guests
                             </a>
                             <a href="{{ url_for('admin.events_list') }}" class="navbar-item">
