--- a/mistelaflask/templates/admin/guests/admin_guest_form.html
+++ b/mistelaflask/templates/admin/guests/admin_guest_form.html
@@ -15,7 +15,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{max_adults}}" class="input is-large" type="number" name="max_adults" placeholder="Allowed guests">
+            <input value="{{max_adults}}" class="input" type="number" name="max_adults" placeholder="Allowed guests">
         </div>
     </div>
 </div>
@@ -25,7 +25,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{max_adults}}" class="input is-large" type="text" name="otp" placeholder="One-Time-Password">
+            <input value="{{max_adults}}" class="input" type="text" name="otp" placeholder="One-Time-Password">
         </div>
     </div>
 </div>
