--- a/mistelaflask/templates/admin/guests/admin_guests_list.html
+++ b/mistelaflask/templates/admin/guests/admin_guests_list.html
@@ -1,27 +1,61 @@
 {% extends "admin/guests/admin_guests_base.html" %}
 
-{% block event_content %}
-    <table class="table is-striped">
+{% block guest_content %}
+<div class="table-container">
+    <table class="table is-striped is-full-width">
         <thead>
             <tr>
                 <th>Actions</th>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
+                <th>Username</th>
+                <th>Full Name</th>
+                <th>Admin</th>
+                <th><abbr title="Maximum allowed adults">N.A.</abbr></th>
+                <th><abbr title="One time password">OTP</abbr></th>
+                <th>Password</th>
+                {% for event in events %}
+                <th>{{event.name | capitalize }}</th>
+                {% endfor %}
             </tr>
         </thead>
         <tbody>
-            {% for guest in guests %}
+            {% for guest, invitations in guest_list %}
             <tr>
                 <td class="has-text-centered">
                     <a href="{{ url_for('admin.guests_detail', guest_id=guest.id) }}"><i class="fas fa-pencil"></i></a>
                     <a href="{{ url_for('admin.guests_remove', guest_id=guest.id) }}"><i class="fas fa-trash"></i></a>
                 </td>
                 <td class="has-text-left">{{ guest.id}}</td>
+                <td class="has-text-left">{{ guest.username }}</td>
                 <td class="has-text-left">{{ guest.name }}</td>
-                <td class="has-text-left">{{ event.description }}</td>
+                <td class="has-text-left">{{ guest.admin }}</td>
+                <td class="has-text-left">{{ guest.max_adults }}</td>
+                <td class="has-text-centered">
+                    {% if guest.otp %}
+                        {{ guest.otp }}
+                    {% else %}
+                        <i class="fas fa-xmark"></i>
+                    {% endif %}
+                </td>
+                <td class="has-text-centered">
+                    {% if guest.password %}
+                        <i class="fas fa-check"></i>
+                    {% else %}
+                        <i class="fas fa-xmark"></i>
+                    {% endif %}
+                </td>
+                {% for _invite in invitations %}
+                    <td class="has-text-centered">
+                    {% if _invite.invited %}
+                        <i class="fas fa-check"></i>
+                    {% else %}
+                        <i class="fas fa-xmark"></i>
+                    {% endif %}
+                    </td>
+                {% endfor %}
             </tr>
             {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
