feat(admin/guests): We can now do full CRUD operations on Guests (users without admin rights)

--- a/mistelaflask/templates/admin/guests/admin_guests_add.html
+++ b/mistelaflask/templates/admin/guests/admin_guests_add.html
@@ -3,7 +3,7 @@
 {% block guest_content %}
     <form method="POST" action="/admin/guests/add">
         {% from 'admin/guests/admin_guest_form.html' import guest_form %}
-        {{ guest_form() }}
-        <button class="button is-block is-info is-medium is-fullwidth">Save event</button>
+        {{ guest_form(guest, invitations) }}
+        <button class="button is-block is-info is-medium is-fullwidth">Add guest</button>
     </form>
 {% endblock %}
