--- a/mistelaflask/templates/admin/guests/admin_guest_form.html
+++ b/mistelaflask/templates/admin/guests/admin_guest_form.html
@@ -1,11 +1,21 @@
-{% macro guest_form(guest_name, max_adults, otp) %}
+{% macro guest_form(guest, invitations) %}
+<div class="field is-horizontal">
+    <div class="field-label is-normal">
+        <label class="label">Username</label>
+    </div>  
+    <div class="field-body">
+        <div class="control">
+            <input value="{{guest.username if guest.username else ''}}" class="input" type="text" name="username" placeholder="Name" autofocus="">
+        </div>
+    </div>
+</div>
 <div class="field is-horizontal">
     <div class="field-label is-normal">
         <label class="label">Name</label>
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{guest_name}}" class="input" type="text" name="name" placeholder="Name" autofocus="">
+            <input value="{{guest.name if guest.name else ''}}" class="input" type="text" name="name" placeholder="Name" autofocus="">
         </div>
     </div>
 </div>
@@ -15,7 +25,7 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{max_adults}}" class="input" type="number" name="max_adults" placeholder="Allowed guests">
+            <input value="{{guest.max_adults}}" class="input" type="number" name="max_adults" placeholder="Allowed guests">
         </div>
     </div>
 </div>
@@ -25,17 +35,22 @@
     </div>  
     <div class="field-body">
         <div class="control">
-            <input value="{{max_adults}}" class="input" type="text" name="otp" placeholder="One-Time-Password">
+            <input value="{{guest.otp if guest.otp else ''}}" class="input" type="text" name="otp" placeholder="One-Time-Password">
         </div>
     </div>
 </div>
-{% for event in events %}
+{% for _event, _is_invited in invitations %}
 <div class="field is-horizontal">
-    <div class="field-label is-normal">
-        <label class="checkbox">
-        <input type="checkbox" name="event_{{ event.id }}">
-        {{event.name}}
-    </label>
+    <div class="field-label">
+        <label class="label">
+            {{_event.name | capitalize}}
+        </label>
+    </div>
+    <div class="field-body">
+        <div class="control">
+            <input type="checkbox" name="event_{{ _event.name }}"  {% if _is_invited %}checked{% endif %}>
+        </div>
+    </div>
 </div>
 {% endfor %}
 {% endmacro %}
