--- a/mistelaflask/templates/admin/responses/admin_invitations_list.html
+++ b/mistelaflask/templates/admin/responses/admin_invitations_list.html
@@ -22,8 +22,8 @@
             {% for guest, invitations in guest_list %}
             <tr>
                 <td class="has-text-centered">
-                    <a href="{{ url_for('admin.guests_detail', guest_id=guest.id) }}"><i class="fas fa-pencil"></i></a>
-                    <a href="{{ url_for('admin.guests_remove', guest_id=guest.id) }}"><i class="fas fa-trash"></i></a>
+                    <a href="{{ url_for('admin.guests_detail', model_id=guest.id) }}"><i class="fas fa-pencil"></i></a>
+                    <a href="{{ url_for('admin.guests_remove', model_id=guest.id) }}"><i class="fas fa-trash"></i></a>
                 </td>
                 <td class="has-text-left">{{ guest.id}}</td>
                 <td class="has-text-left">{{ guest.username }}</td>
