chore: Fixed link for invitations index

--- a/mistelaflask/templates/admin/admin.html
+++ b/mistelaflask/templates/admin/admin.html
@@ -30,8 +30,8 @@
                             <a href="{{ url_for('admin.events_list') }}" class="navbar-item">
                                 Events
                             </a>
-                            <a href="{{ url_for('admin.responses') }}" class="navbar-item">
-                                Responses
+                            <a href="{{ url_for('admin.invitations_list') }}" class="navbar-item">
+                                Invitations
                             </a>
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
