--- a/mistelaflask/templates/admin/admin_index.html
+++ b/mistelaflask/templates/admin/admin_index.html
@@ -4,4 +4,15 @@
 <h1 class="title">
   Admin page
 </h1>
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      <div class="box">
+        <ul class=flashes>
+            {% for category, message in messages %}
+                <li class="notification is-{{ category }} is-light">{{ message }}</li>
+            {% endfor %}
+            </ul>
+      </div>
+    {% endif %}
+  {% endwith %}
 {% endblock %}
