chore: Improved template layout for guests add batch

--- a/mistelaflask/templates/admin/guests/admin_guests_base.html
+++ b/mistelaflask/templates/admin/guests/admin_guests_base.html
@@ -8,6 +8,7 @@
             <ul>
                 <li><a href="{{ url_for('admin.guests_list') }}">List</a></li>
                 <li><a href="{{ url_for('admin.guests_add') }}">Create</a></li>
+                <li><a href="{{ url_for('admin.guests_add_batch') }}">Add batch</a></li>
                 <li><a>Extra</a></li>
             </ul>
         </div>
