feat(admin_views/invitations): Added templates for create, read, delete invitations

--- a/mistelaflask/templates/admin/invitations/admin_invitations_add.html
+++ b/mistelaflask/templates/admin/invitations/admin_invitations_add.html
@@ -3,7 +3,7 @@
 {% block invitation_content %}
     <form method="POST" action="/admin/invitations/add">
         {% from 'admin/invitations/admin_invitation_form.html' import invitation_form %}
-        {{ invitation_form(guest, invitations) }}
+        {{ invitation_form(invitation, events, guests) }}
         <button class="button is-block is-info is-medium is-fullwidth">Add invitation</button>
     </form>
 {% endblock %}
