--- a/mistelaflask/templates/admin/invitations/admin_invitations_detail.html
+++ b/mistelaflask/templates/admin/invitations/admin_invitations_detail.html
@@ -3,7 +3,7 @@
 {% block invitation_content %}
     <form method="POST" action="/admin/guests/detail/{{invitation.id}}">
         {% from 'admin/invitations/admin_invitation_form.html' import invitation_form %}
-        {{ invitation_form(guest, invitations) }}
+        {{ invitation_form(invitation, events, guests) }}
         <button class="button is-block is-info is-medium is-fullwidth">Update invitation</button>
     </form>
 {% endblock %}
