--- a/mistelaflask/templates/admin/invitations/admin_invitation_form.html
+++ b/mistelaflask/templates/admin/invitations/admin_invitation_form.html
@@ -4,12 +4,15 @@
         <label class="label">Event</label>
     </div>  
     <div class="field-body">
-        <div class="select" name="select_event">
-            <select>
-              {% for _event in events %}
+        <div class="select" >
+            {% if invitation.id == None %}
+            <select name="select_event">
+            {% else %}
+            <select name="select_event" disabled>
+            {% endif %}
+                {% for _event in events %}
               {% set _selected_event = invitation.event_id == _event.id %}
-                
-                <option {{selected if _selected_event}}>{{_event.name | capitalize }}</option>
+                <option {{'selected' if _selected_event}} value="{{_event.id}}">{{_event.name | capitalize }}</option>
               {% endfor %}
             </select>
           </div>
@@ -20,14 +23,85 @@
         <label class="label">Username</label>
     </div>  
     <div class="field-body">
-        <div class="select" name="select_guest">
-            <select>
+        <div class="select">
+            {% if invitation.id == None %}
+            <select name="select_guest">
+            {% else %}
+            <select name="select_guest" disabled>
+            {% endif %}
               {% for _guest in guests %}
               {% set _selected_guest = invitation.guest_id == _guest.id %}
-              <option {{ selected if _selected_guest }}>{{_guest.id}} | {{_guest.username}}</option>
+              <option {{ 'selected' if _selected_guest }} value="{{_guest.id}}">{{_guest.username}}</option>
               {% endfor %}
             </select>
           </div>
+    </div>
+</div>
+<div class="field is-horizontal">
+    <div class="field-label">
+        <label class="label">
+            Response
+        </label>
+    </div>
+    <div class="field-body">
+        <div class="select">
+            <select name="response">
+                {% if invitation.response == None %}
+                <option value="True">Yes</option>
+                <option value="False">No</option>
+                <option value="" selected>?</option>
+                {% else %}
+                    {% if invitation.response %}
+                    <option value="True"}} selected>Yes</option>
+                    <option value="False"}}>No</option>
+                    {% else %}
+                    <option value="True"}}>Yes</option>
+                    <option value="False"}} selected>No</option>                    
+                    {% endif %}
+                    <option value="">?</option>
+                {% endif %}
+            </select>
+        </div>
+    </div>
+</div>
+<div class="field is-horizontal">
+    <div class="field-label is-normal">
+        <label class="label">Adults</label>
+    </div>  
+    <div class="field-body">
+        <div class="control">
+            <input value="{{invitation.n_adults}}" class="input" type="number" name="n_adults">
+        </div>
+    </div>
+</div>
+<div class="field is-horizontal">
+    <div class="field-label is-normal">
+        <label class="label">Children</label>
+    </div>  
+    <div class="field-body">
+        <div class="control">
+            <input value="{{invitation.n_children}}" class="input" type="number" name="n_children">
+        </div>
+    </div>
+</div>
+<div class="field is-horizontal">
+    <div class="field-label is-normal">
+        <label class="label">Babies</label>
+    </div>  
+    <div class="field-body">
+        <div class="control">
+            <input value="{{invitation.n_babies}}" class="input" type="number" name="n_babies">
+        </div>
+    </div>
+</div>
+<div class="field is-horizontal">
+    <div class="field-label is-normal">
+        <label class="label">Remarks</label>
+    </div>  
+    <div class="field-body">
+        <div class="control">
+            <input value="{{invitation.remarks}}" class="input" type="text" name="remarks">
+        </div>
     </div>
 </div>
 {% endmacro %}
