--- a/mistelaflask/templates/admin/invitations/admin_invitations_detail.html
+++ b/mistelaflask/templates/admin/invitations/admin_invitations_detail.html
@@ -1,7 +1,7 @@
 {% extends "admin/invitations/admin_invitations_base.html" %}
 
 {% block invitation_content %}
-    <form method="POST" action="/admin/guests/detail/{{invitation.id}}">
+    <form method="POST" action="/admin/invitations/detail/{{invitation.id}}">
         {% from 'admin/invitations/admin_invitation_form.html' import invitation_form %}
         {{ invitation_form(invitation, events, guests) }}
         <button class="button is-block is-info is-medium is-fullwidth">Update invitation</button>
