--- a/mistelaflask/templates/admin/invitations/admin_invitations_base.html
+++ b/mistelaflask/templates/admin/invitations/admin_invitations_base.html
@@ -8,6 +8,7 @@
             <ul>
                 <li><a href="{{ url_for('admin.invitations_list') }}">List</a></li>
                 <li><a href="{{ url_for('admin.invitations_add') }}">Create</a></li>
+                <li><a href="{{ url_for('admin.invitations_bulk_list') }}">Bulk Edit</a></li>
                 <li><a href="{{ url_for('admin.invitations_summary') }}">Summary</a></li>
             </ul>
         </div>
