--- a/mistelaflask/templates/auth/login.html
+++ b/mistelaflask/templates/auth/login.html
@@ -18,16 +18,19 @@
             </div>
         {% endif %}
         {% endwith %}
+        <div class="notification is-info is-light">
+           <a href="{{ url_for('auth.login_otp')}}">Click here to log with a OTP code</a>
+        </div>
         <form method="POST" action="/login">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="name" placeholder="Your Username" autofocus="">
+                    <input class="input" type="text" name="name" placeholder="Your Username" autofocus="">
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    <input class="input" type="password" name="password" placeholder="Your Password">
                 </div>
             </div>
             <div class="field">
@@ -36,7 +39,7 @@
                     Remember me
                 </label>
             </div>
-            <button class="button is-block is-info is-large is-fullwidth">Login</button>
+            <button class="button is-block is-info is-fullwidth">Login</button>
         </form>
     </div>
 </div>
