--- a/mistelaflask/templates/auth/otp_login.html
+++ b/mistelaflask/templates/auth/otp_login.html
@@ -9,7 +9,7 @@
         </div>
     {% endif %}
     {% endwith %}
-    <h3 class="title">Login</h3>
+    <h3 class="title">OTP Login</h3>
     <div class="box">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -18,6 +18,9 @@
             </div>
         {% endif %}
         {% endwith %}
+        <div class="notification is-info is-light">
+            <a href="{{ url_for('auth.login')}}">Click here to log with Username and password</a>
+         </div>
         <form method="POST" action="/otp">
             <div class="field">
                 <div class="control">
